# streaming-service-sales

./: .gitignore  README.md  note.md  pyproject.toml
analysis/: initial.ipynb
analysis/.ipynb_checkpoints/: initial-checkpoint.ipynb
data_v1_analysis/: artists.ipynb  config_file.py  sessions.ipynb  tracks.ipynb
data_v2_analysis/: artists.ipynb  artists_plays.ipynb  clear_artists.py  clear_sessions.py  clear_tracks.py  config_file.py  sessions.ipynb  tracks.ipynb
data_v3/: all_artist_monthly.csv  all_artist_weekly.csv  sarima_dummy_scores.csv
data_v3/plays_per_week/: 00CsjN69YCczmdW0bDKaCC.csv  00FQb4jTyendYWaN8pK0wa.csv  00OF0nwYaoBSO3AnPVq3vE.csv  00UuF3fAevVz8L0f1WfiQ6.csv  00tVTdpEhQQw1bqdu8RCx2.csv  01WjpKiWVNurV5hjIadB8C.csv  01hRNr3yF5bYnPq4wZ88iI.csv  (+1472 more)
data_v3_analysis/: clear_sessions.py  clear_tracks.py  config_file.py  generate_artists_plays_per_week.py  generate_timestamp_artist.py  generate_timestamp_track_event_type.py  generate_track_artist_duration.py  main.py  note.md
docs/: analysis.md  model.md  pipeline.md  score_criterions.md  service.md
model/: Out_97.csv  all_plays_in_service.ipynb  analyze_sarima_dummy.ipynb  compare_artists.ipynb  complex_and_naive_pred_all_artists.py  duration_of_play.ipynb  generate_aritist_sessions.ipynb  model.ipynb  model.py  model_all_artists.ipynb  one_artist_auto_arima.ipynb  one_artist_model.ipynb  service_model_on_1_artist.ipynb  service_model_on_1_artist.py  t  v2.ipynb
reference/: time-series-forecasting-w-arima-sarima.ipynb
service/: build.py  config.py  dependencies.py  how_to_run.md  main.py
(+14 files in other folders)
