[tool.poetry]
name = "IUM"
version = "0.1.0"
description = ""
authors = ["Wojtek Zarzecki", "Patryk Filip Gryz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
jupyter = "^1.0.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
